@@ -36,6 +36,20 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|TokenStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|core
 operator|.
 name|KeywordTokenizerFactory
@@ -166,6 +180,22 @@ name|org
 operator|.
 name|apache
 operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|util
+operator|.
+name|TokenFilterFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|util
@@ -265,6 +295,16 @@ operator|.
 name|util
 operator|.
 name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
 import|;
 end_import
 
@@ -1300,6 +1340,118 @@ literal|"otherFile"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|loader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Deprecated
+DECL|class|DeprecatedTokenFilterFactory
+specifier|public
+specifier|static
+specifier|final
+class|class
+name|DeprecatedTokenFilterFactory
+extends|extends
+name|TokenFilterFactory
+block|{
+DECL|method|DeprecatedTokenFilterFactory
+specifier|public
+name|DeprecatedTokenFilterFactory
+parameter_list|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|args
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|args
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|create
+specifier|public
+name|TokenStream
+name|create
+parameter_list|(
+name|TokenStream
+name|input
+parameter_list|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+block|}
+DECL|method|testLoadDeprecatedFactory
+specifier|public
+name|void
+name|testLoadDeprecatedFactory
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrResourceLoader
+name|loader
+init|=
+operator|new
+name|SolrResourceLoader
+argument_list|(
+literal|"solr/collection1"
+argument_list|)
+decl_stmt|;
+comment|// ensure we get our exception
+name|loader
+operator|.
+name|newInstance
+argument_list|(
+name|DeprecatedTokenFilterFactory
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|TokenFilterFactory
+operator|.
+name|class
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|Class
+index|[]
+block|{
+name|Map
+operator|.
+name|class
+block|}
+argument_list|,
+operator|new
+name|Object
+index|[]
+block|{
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+block|}
+argument_list|)
+expr_stmt|;
+comment|// TODO: How to check that a warning was printed to log file?
 name|loader
 operator|.
 name|close
